[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 40.0

[node name="MenuPanel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/HBoxContainer"]
margin_right = 203.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MasterLabel" type="Label" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Master"
align = 1
valign = 1

[node name="Control" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 203.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="SFXLabel" type="Label" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 203.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SFX"
align = 1
valign = 1

[node name="Control2" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 203.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MusicLabel" type="Label" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 203.0
margin_bottom = 257.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Music"
align = 1
valign = 1

[node name="Control3" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 261.0
margin_right = 203.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control4" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 203.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control5" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 203.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuPanel/HBoxContainer"]
margin_left = 207.0
margin_right = 614.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterSlider" type="HSlider" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_right = 407.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_top = 65.0
margin_right = 407.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="SFXSlider" type="HSlider" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_top = 99.0
margin_right = 407.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_top = 164.0
margin_right = 407.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MusicSlider" type="HSlider" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_top = 199.0
margin_right = 407.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_top = 264.0
margin_right = 407.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ReturnButton" type="Button" parent="MenuPanel/HBoxContainer/VBoxContainer2"]
margin_top = 298.0
margin_right = 407.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Return"
